--- a/EMTResponseApp/app/src/main/res/values/strings.xml
+++ b/EMTResponseApp/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">EMTResponseApp</string>
+    <string name="title_activity_scanner">ScannerActivity</string>
 </resources>
